fix centering of logo on mobile pt.2

--- a/public/style/custom.css
+++ b/public/style/custom.css
@@ -418,7 +418,7 @@ section {
 	}
 
 	#timetable {
-		max-width: 100%;
+		max-width: 100% !important;
 	  }
 	
 }
